<resources>
    <string name="app_name">UAMS</string>
    <string name="app_name_long">Universal Asset Management System</string>
    <string name="active_warehouse">Current Warehouse: </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="inventory_add_item">Add Item</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer Strings-->
    <string name="navigation_inventory">Inventory</string>
    <string name="navigation_gen_report">Generate Report</string>
    <string name="navigation_warehouse">Change Warehouse</string>
    <string name="navigation_connect">Connect to UAMS</string>
    <string name="navigation_receive">Receive Data</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_communicate">Communicate</string>
    <string name="navigation_send_report">Send Report</string>

    <!--Menu Item Strings-->
    <string name="menu_add_item">Add Item</string>
    <string name="menu_add_warehouse">Add Warehouse</string>
    <string name="menu_edit_warehouse">Edit Warehouses</string>

    <!--Button Strings-->
    <string name="button_enable">Enable</string>
    <string name="button_disable">Disable</string>
    <string name="button_get_device">Pair Device</string>
    <string name="button_submit">Submit</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="button_connect">Establish Connection</string>
    <string name="button_generate_report">Generate Report</string>

    <!--Fragment Headers-->
    <string name="header_create_warehouse">Create New Warehouse</string>
    <string name="header_bluetooth">Establish Bluetooth Connection</string>
    <string name="header_create_item">Create New Item</string>
    <string name="header_connect">Collect Data from the Device</string>
    <string name="header_generate_report">Generate Inventory Report</string>

    <!--Fragment Display Messages-->
    <string name="message_bluetooth">"Click ''Enable'' to turn on Bluetooth Connection \n
        To pair with UAMS, click ''Get Device''"</string>
    <string name="message_create_warehouse">Please enter the Warehouse Name and Location</string>
    <string name="message_create_item">Please fill the following Item fields</string>
    <string name="message_connect">Please establish connection to UAMS</string>

    <!--Entity Labels and Placeholders-->
    <string name="label_name">Name</string>
    <string name="label_location">Location</string>
    <string name="label_quantity">Quantity</string>
    <string name="label_description">Description</string>
    <string name="label_image">Image</string>
    <string name="placeholder_warehouse_name">Warehouse Name</string>
    <string name="placeholder_warehouse_location">Warehouse Location</string>
    <string name="placeholder_item_name">Item Name</string>
    <string name="placeholder_item_quantity">Item Quantity</string>
    <string name="placeholder_item_location">Item Location</string>
    <string name="placeholder_item_description">Item Description</string>
    <string name="thumbnail">thumbnail</string>

    <string-array name="fakeItems">
        <item>Item1</item>
        <item>Item2</item>
        <item>Item3</item>
        <item>Item4</item>
        <item>Item5</item>
        <item>Item6</item>
        <item>Item7</item>
        <item>Item8</item>
        <item>Item9</item>
        <item>Item10</item>
        <item>Item11</item>
        <item>Item12</item>
        <item>Item13</item>
        <item>Item14</item>
        <item>Item15</item>
    </string-array>
</resources>
