<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/navigation_inventory"
            android:id="@+id/nav_inv"
            android:icon="@drawable/ic_menu_inventory_list"/>
        <item
            android:title="@string/navigation_gen_report"
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_menu_report"/>
        <item
            android:title="@string/navigation_warehouse"
            android:id="@+id/nav_warehouse"
            android:icon="@drawable/ic_menu_change_warehouse"/>
        <item
            android:title="@string/navigation_connect"
            android:id="@+id/nav_bluetooth"
            android:icon="@drawable/ic_bluetooth_black"/>

        <item
            android:title="@string/navigation_receive"
            android:id="@+id/nav_receive_data"
            android:icon="@drawable/ic_menu_receive_data"/>
    </group>

</menu>
