<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!--Display Message-->
    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/create_item_header"
        android:text="@string/header_create_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/create_item_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_create_item"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="140dp"/>

    <!--Item Name-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/warehouse_name_label"
        android:text="@string/label_name"
        android:layout_marginTop="200dp"
        android:layout_alignLeft="@+id/create_item_name"
        android:layout_alignStart="@+id/create_item_name" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_item_name"
        android:text="@string/placeholder_item_name"
        android:ems="7"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/warehouse_name_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />


    <!--Item Location-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_location_label"
        android:text="@string/label_location"
        android:layout_marginTop="200dp"
        android:layout_above="@+id/create_item_location"
        android:layout_alignLeft="@+id/create_item_location"
        android:layout_alignStart="@+id/create_item_location" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_item_location"
        android:text="@string/placeholder_item_location"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:ems="8"
        android:layout_alignBaseline="@+id/create_item_name"
        android:layout_alignBottom="@+id/create_item_name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp" />

    <!--Item Quantity-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_quantity_label"
        android:text="@string/label_quantity"
        android:layout_marginTop="275dp"
        android:layout_alignLeft="@+id/create_item_name"
        android:layout_alignStart="@+id/create_item_name" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_item_quantity"
        android:text="@string/placeholder_item_quantity"
        android:inputType="number"
        android:ems="7"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/item_quantity_label"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp" />

    <!--Item Description-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_description_label"
        android:text="@string/label_description"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignLeft="@+id/create_item_location"
        android:layout_alignStart="@+id/create_item_location"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create_item_description"
        android:text="@string/placeholder_item_description"
        android:inputType="text"
        android:ems="8"
        android:selectAllOnFocus="true"
        android:layout_below="@+id/item_description_label"
        android:layout_alignBaseline="@+id/create_item_quantity"
        android:layout_alignBottom="@+id/create_item_quantity"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp" />

    <!--Item Image-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_image_label"
        android:layout_marginTop="350dp"
        android:text="@string/label_image"
        android:layout_alignStart="@+id/create_item_quantity"
        android:layout_alignLeft="@+id/create_item_quantity"/>
    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:id="@+id/create_item_image"
        android:layout_marginTop="375dp"
        android:layout_marginStart="35dp"
        android:layout_marginLeft="35dp"
        android:background="@color/colorPrimaryDark"
        android:padding="1dp"
        android:clickable="true"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/item_submit_button"
        android:clickable="true"
        android:text="@string/button_submit"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="75dp"
        android:layout_marginLeft="75dp"
        android:layout_marginTop="450dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:id="@+id/item_cancel_button"
        android:text="@string/button_cancel"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="75dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="450dp" />

</RelativeLayout>