<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bluetoothTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/BluetoothFragmentHeader"
        android:text="@string/header_bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/BluetoothFragmentMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_bluetooth"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"/>

    <ImageView
        android:id="@+id/UAMSLOGO1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="220dp"
        app:srcCompat="@drawable/ic_nav_drawer_logo" />

    <Button
        android:id="@+id/enableButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/button_enable"
        android:clickable="true"
        android:onClick="enable"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="420dp"/>

    <Button
        android:id="@+id/disableButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:text="@string/button_disable"
        android:clickable="true"
        android:onClick="disable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="420dp" />

    <Button
        android:id="@+id/getDeviceButton"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:clickable="true"
        android:onClick="getDevice"
        android:text="@string/button_get_device"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="420dp" />

</RelativeLayout>