<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <!--App Name-->
    <TextView
        android:id="@+id/application_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textSize="50sp" />

    <!--Fragment Header-->
    <TextView
        android:id="@+id/receive_data_header"
        android:text="@string/header_generate_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="25sp" />

    <ImageView
        android:id="@+id/UAMSLOGO1"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        app:srcCompat="@drawable/ic_nav_drawer_logo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_generate_report"
        android:layout_below="@+id/UAMSLOGO1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="55dp"
        android:text="@string/button_generate_report" />

</RelativeLayout>